payment methods added

--- a/homeoptik/templates/oscar/checkout/nav.html
+++ b/homeoptik/templates/oscar/checkout/nav.html
@@ -1,7 +1,11 @@
 {% load staticfiles %}
 {% load i18n %}
 
-
+<style>
+    .hnav.nav-bottom.fixed {
+        position: relative;
+    }
+</style>
 <!-- Nav Bottom
 .............................................. -->
 <nav class="nav-bottom hnav hnav-ruled white-bg boxed-section">
