--- a/homeoptik/templates/oscar/partials/footer.html
+++ b/homeoptik/templates/oscar/partials/footer.html
@@ -11,7 +11,7 @@
     <!-- Container -->
     <div class="container">
 
-        <form action="/newsletter/next={{ request.path }}" method="post">
+        <form action="/newsletter/" method="post">
             {% csrf_token %}
             <!-- Row -->
             <div class="row grid-10">
